# malba.tahan

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  script.js  style.css
.claude/: settings.json
.claude/skills/new-chapter/: SKILL.md
.claude/skills/new-puzzle/: SKILL.md
.claude/skills/play/: SKILL.md
src/malba_tahan/: __init__.py  __main__.py  app.py  game.py  scale_art.py
src/malba_tahan/assets/art/: baghdad.txt  caravan.txt  desert.txt
src/malba_tahan/content/: characters.yaml
src/malba_tahan/content/chapters/: 00_prologue.yaml
src/malba_tahan/engine/: __init__.py  anim.py  assets.py  director.py  novel_screen.py  story.py  widgets.py
src/malba_tahan/puzzles/: __init__.py  balance.py
tests/: test_anim.py  test_game.py  test_story.py
