[project]
name = "malba.tahan"
version = "0.0.1"
description = "Malba Tahan — a terminal balance-puzzle toy inspired by Malba Tahan's 'The Man Who Counted'."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "André Luís" }]
keywords = ["game", "puzzle", "terminal", "tui", "textual", "malba-tahan"]
dependencies = [
    "textual>=0.79",
]

[project.scripts]
"malba.tahan" = "malba_tahan.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "textual-dev>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/malba_tahan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
