[project]
name = "malba.tahan"
version = "0.0.2"
description = "Malba Tahan — a terminal visual-novel game inspired by Malba Tahan's 'The Man Who Counted'."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "André Luís" }]
keywords = ["game", "puzzle", "visual-novel", "terminal", "tui", "textual", "malba-tahan"]
dependencies = [
    "textual>=0.79",
    "pyyaml>=6",
]

[project.scripts]
"malba.tahan" = "malba_tahan.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "textual-dev>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/malba_tahan"]
# ship the story scripts and ascii art alongside the python sources
artifacts = [
    "src/malba_tahan/content/**/*.yaml",
    "src/malba_tahan/assets/**/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
